--- a/examples/01_discover_catalog.ipynb
+++ b/examples/01_discover_catalog.ipynb
@@ -11,9 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available collections:\n",
+      "  - CCI_BIOMASS\n",
+      "  - SAATCHI_BIOMASS\n",
+      "  - TMF\n",
+      "  - EFDA\n",
+      "  - POTAPOV_HEIGHT\n",
+      "  - GAMI\n",
+      "  - JRC_GFC2020\n",
+      "  - ROBINSON_CR\n",
+      "  - FORESTPATHS_GENUS\n",
+      "  - HANSEN_GFC\n"
+     ]
+    }
+   ],
    "source": [
     "from eoforeststac.providers.zarr import ZarrProvider\n",
     "\n",
@@ -38,9 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Items for collection 'CCI_BIOMASS':\n",
+      "  - CCI_BIOMASS_v6.0\n"
+     ]
+    }
+   ],
    "source": [
     "collection_id = \"CCI_BIOMASS\"\n",
     "items = provider.list_items(collection_id)\n",
@@ -59,17 +86,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'type': 'Feature', 'stac_version': '1.1.0', 'stac_extensions': [], 'id': 'CCI_BIOMASS_v6.0', 'geometry': {'type': 'Polygon', 'coordinates': [[[-180, -90], [-180, 90], [180, 90], [180, -90], [-180, -90]]]}, 'bbox': [-180, -90, 180, 90], 'properties': {'product_name': 'ESA CCI Biomass Global Annual Maps', 'version': '6.0', 'start_datetime': '2007-01-01T00:00:00', 'end_datetime': '2020-12-31T00:00:00', 'datetime': '2020-12-31T00:00:00Z'}, 'links': [{'rel': 'root', 'href': 's3://dog.atlaseo-glm.eo-gridded-data/collections/catalog.json', 'type': 'application/json'}, {'rel': 'collection', 'href': 's3://dog.atlaseo-glm.eo-gridded-data/collections/CCI_BIOMASS/collection.json', 'type': 'application/json', 'title': 'ESA CCI Biomass Global Annual Maps'}, {'rel': 'self', 'href': 's3://dog.atlaseo-glm.eo-gridded-data/collections/CCI_BIOMASS/CCI_BIOMASS_v6.0/CCI_BIOMASS_v6.0.json', 'type': 'application/json'}, {'rel': 'parent', 'href': 's3://dog.atlaseo-glm.eo-gridded-data/collections/CCI_BIOMASS/collection.json', 'type': 'application/json', 'title': 'ESA CCI Biomass Global Annual Maps'}], 'assets': {'zarr': {'href': 's3://dog.atlaseo-glm.eo-gridded-data/collections/CCI_BIOMASS/CCI_BIOMASS_v6.0.zarr', 'type': 'application/vnd+zarr', 'title': 'CCI Biomass v6.0 Zarr', 'roles': ['data']}}, 'collection': 'CCI_BIOMASS'}\n"
+     ]
+    }
+   ],
    "source": [
     "item = items[-1]\n",
     "print(item.to_dict())"
    ]
   }
  ],
- "metadata": { "kernelspec": { "display_name": "Python 3", "language": "python", "name": "python3" }, "language_info": { "name": "python", "version": "" } },
+ "metadata": {
+  "kernelspec": {
+   "display_name": "eoforeststac",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
-
