--- a/examples/03_align_and_compare.ipynb
+++ b/examples/03_align_and_compare.ipynb
@@ -31,13 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "699810fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "provider = ZarrProvider(\n",
-    "    catalog_url=\"s3://dog.atlaseo-glm.eo-gridded-data/collections/catalog.json\",\n",
+    "    catalog_url=\"https://s3.gfz-potsdam.de/dog.atlaseo-glm.eo-gridded-data/collections/public/catalog.json\",\n",
     "    endpoint_url=\"https://s3.gfz-potsdam.de\",\n",
     "    anon=True,\n",
     ")"
