--- a/examples/01_discover_catalog.ipynb
+++ b/examples/01_discover_catalog.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
     "from eoforeststac.providers.zarr import ZarrProvider\n",
     "\n",
     "provider = ZarrProvider(\n",
-    "    catalog_url=\"s3://dog.atlaseo-glm.eo-gridded-data/collections/catalog.json\",\n",
+    "    catalog_url=\"https://s3.gfz-potsdam.de/dog.atlaseo-glm.eo-gridded-data/collections/public/catalog.json\",\n",
     "    endpoint_url=\"https://s3.gfz-potsdam.de\",\n",
     "    anon=True,\n",
     ")\n",
