--- a/examples/02_read_collection.ipynb
+++ b/examples/02_read_collection.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
     "import geopandas as gpd\n",
     "\n",
     "provider = ZarrProvider(\n",
-    "    catalog_url=\"s3://dog.atlaseo-glm.eo-gridded-data/collections/catalog.json\",\n",
+    "    catalog_url=\"https://s3.gfz-potsdam.de/dog.atlaseo-glm.eo-gridded-data/collections/public/catalog.json\",\n",
     "    endpoint_url=\"https://s3.gfz-potsdam.de\",\n",
     "    anon=True,\n",
     ")\n",
