apply code black format

--- a/examples/03_align_and_compare.ipynb
+++ b/examples/03_align_and_compare.ipynb
@@ -246,10 +246,12 @@
     "    },\n",
     ")\n",
     "\n",
-    "aligned = aligner.align({\n",
-    "    \"CCI_BIOMASS\": ds_biomass_sel.sel(time='2020-01-01'),\n",
-    "    \"EFDA\": ds_efda_sel.sel(time='2020-01-01'),\n",
-    "})\n",
+    "aligned = aligner.align(\n",
+    "    {\n",
+    "        \"CCI_BIOMASS\": ds_biomass_sel.sel(time=\"2020-01-01\"),\n",
+    "        \"EFDA\": ds_efda_sel.sel(time=\"2020-01-01\"),\n",
+    "    }\n",
+    ")\n",
     "\n",
     "print(aligned)"
    ]
@@ -294,14 +296,10 @@
    "source": [
     "fig, axes = plt.subplots(1, 2, figsize=(12, 5), constrained_layout=True)\n",
     "\n",
-    "reduce_for_plot(aligned.aboveground_biomass).plot(\n",
-    "    ax=axes[0], cmap=\"viridis\"\n",
-    ")\n",
+    "reduce_for_plot(aligned.aboveground_biomass).plot(ax=axes[0], cmap=\"viridis\")\n",
     "axes[0].set_title(\"Mean AGB (CCI Biomass)\")\n",
     "\n",
-    "reduce_for_plot(aligned.efda_disturbance).plot(\n",
-    "    ax=axes[1], cmap=\"inferno\"\n",
-    ")\n",
+    "reduce_for_plot(aligned.efda_disturbance).plot(ax=axes[1], cmap=\"inferno\")\n",
     "axes[1].set_title(\"EFDA disturbance intensity\")\n",
     "\n",
     "plt.show()"
